update a lot of files

--- a/README
+++ b/README
@@ -1,1 +1,19 @@
 # cse583_project2
+# does not include provided data and `loaddata.m`
+
+`wineLDA.m` Fisher Projection on wine dataset.
+'wallPaperLDA.m' Fisher Projection on wallpaper dataset.
+`taijiLDA.m` Fisher Projection on taiji dataset.
+
+`wineLeastSquare.m` Least Square on wine dataset.
+`wallPaper.m` Least Square on wallpaper dataset.
+`taiji.m` Least Square on taiji dataset.
+
+`face.m` extra credit part, use face dataset.
+
+`myPRedictLeastSquare.m` predict labels when using Least Square Classifier.
+`myConfusion.m` create confusion matrix.
+`myMatch.m` match categorical labels with calculabel double values.
+`myKNN.m` use KNN to predict labels
+
+`myVisualizeBoundries.m` modify the given version to draw boundries.
